# ezsp-spi-bridge

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Justfile  config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: bridge.rs  buffer.rs  config.rs  logging.rs  main.rs  server.rs  settings.rs
src/ash/: buffer.rs  checksum.rs  codec.rs  connection.rs  constants.rs  error.rs  escaping.rs  mod.rs  randomizer.rs  types.rs
src/ash/frame/: ack.rs  data.rs  error.rs  mod.rs  nak.rs  parsers.rs  rst.rs  rst_ack.rs  tests.rs  utils.rs
src/ash/protocol/: handles.rs  mod.rs  state.rs  stream.rs  task.rs  tests.rs
src/buffer/: buffer.rs  buffer_mut.rs  mod.rs
src/buffers/: buffer.rs
src/spi/: command.rs  device.rs  error.rs  handle.rs  inner.rs  mod.rs  ncp.rs  reset.rs  response.rs  transaction.rs  wakeup.rs
src/spi/device/: handle.rs  mod.rs  peripheral.rs  traits.rs
src/test/: mod.rs  sink.rs
