[package]
name = "ezsp-spi-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Adam Jacobus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.5.1"
bytes = "1.4.0"
argh = "0.1.10"
crc = "3.0.1"
nom = "7.1.3"
tokio = { version = "1.27.0", features = ["full", "test-util"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-stream = "0.1.12"
