[package]
name = "ezsp-spi-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Adam Jacobus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.6.0"
bytes = "1.4.0"
argh = "0.1.10"
crc = "3.0.1"
nom = "7.1.3"
tokio = { version = "1.27.0", features = ["full", "test-util"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-stream = "0.1.12"
async-trait = "0.1.73"
tokio-gpiod = "0.2.3"
mockall = "0.11.4"
gpiod = { git = "https://github.com/proman21/gpiod-rs.git", branch = "add_fd_traits" }
popol = "3.0.0"
