[package]
name = "ezsp-spi-driver"
version = "0.1.0"
edition = "2021"
authors = ["Adam Jacobus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.6.0"
bytes = "1.4.0"
argh = "0.1.10"
crc = "3.0.1"
nom = "7.1.3"
tokio = { version = "1.27.0", features = ["full", "test-util"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-stream = "0.1.12"
async-trait = "0.1.73"
mockall = "0.11.4"
gpiod = { git = "https://github.com/proman21/gpiod-rs.git", branch = "add_fd_traits" }
popol = "3.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
config = "0.13.4"
anyhow = "1.0.75"
thiserror = "1.0.50"
futures = { version = "0.3.29", features = ["std"]}
pin-project = "1.1.3"
